# FormFiller

./: .gitignore  LICENSE  README.md  eslint.config.js  package.json  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.tauri.js
.github/workflows/: publish.yml
src/: index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/stored/: lastinfo.json  settings.json
src/components/: page.tsx  resizable.tsx  text.tsx
src/data/: example.ts  pdf.ts  scraper.ts  storage.ts  variables.ts
src/pages/: edit.tsx  form.tsx  search.tsx  variables.tsx
